--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,25 @@
-@media screen {
-  #voiture {
-    position: static;
-    display: block;
+/* Warning!! l'ordre des informations en css a une importance ! */
+img {
+  /* pour que l'image soit centrée sur tous les formats d'écran */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+/* media query pour une tablette */
+@media screen and (max-width: 992px) {
+  img {
+    width: 75%;
+  }
+}
+/* media query pour un téléphone portrait */
+@media screen and (max-width: 576px) {
+  img {
     width: 100%;
   }
 }
-@media screen {
-  #voiture {
-    position: static;
-    display: block;
-    width: 75%;
+@media screen and (max-height: 375px) {
+  img {
+    width: 50%;
   }
 }
